// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match snapshot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot when opened 1`] = `
<scale-modal opened="">
  <mock:shadow-root>
    <style>
      .modal__content-0-0-64 {
  top: 10vh;
  left: 25%;
  color: #333;
  width: 50%;
  display: flex;
  opacity: 0;
  padding: 1rem;
  z-index: 100;
  overflow: hidden;
  position: fixed;
  max-width: 550px;
  background: white;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
  box-sizing: border-box;
  text-align: left;
  transition: all 0.5s ease-out;
  border-radius: 3px;
  flex-direction: column;
  pointer-events: none;
  justify-content: space-between;
}
.modal__backdrop-0-0-65 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  opacity: 0;
  z-index: 10;
  position: fixed;
  background: rgba(0, 0, 0, 0.75);
  pointer-events: none;
}
.modal__header-0-0-66 {
  color: #333;
  margin: 0;
  display: flex;
  padding: 0.5rem 0;
  font-size: 0.8rem;
  border-bottom: 1px solid #333;
  justify-content: space-between;
}
.modal__header-0-0-66 ::slotted(*) {
  color: #262626;
  margin: 0;
  font-size: 1rem;
  font-weight: bold;
}
.modal__body-0-0-67 {
  display: flex;
  padding: 1rem 0;
  justify-content: space-between;
}
.modal__close-0-0-68 {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
  font-size: 1rem;
}
.modal__close-0-0-68:hover {
  opacity: 1;
}
.modal__actions-0-0-69 {
  display: flex;
  padding: 1rem 0;
  border-top: 1px solid #ccc;
  justify-content: flex-end;
}
.modal__actions-0-0-69 t-button {
  margin: 0.25rem;
}
.modal--opened-0-0-70 {}
.modal--opened-0-0-70 .modal__backdrop-0-0-65, .modal--opened-0-0-70 .modal__content-0-0-64 {
  opacity: 1;
  pointer-events: all;
}
.modal--opened-0-0-70 .modal__content-0-0-64 {
  top: 15vh;
}
    </style>
    <div class="modal--opened-0-0-70">
      <div class="modal__backdrop-0-0-65"></div>
      <div class="modal__content-0-0-64">
        <div class="modal__body-0-0-67">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-modal>
`;

exports[`Modal should match snapshot with actions slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="modal-actions">
    Action buttons
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with close slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="close">
    Close
  </span>
  Content
</scale-modal>
`;

exports[`Modal should match snapshot with header slot 1`] = `
<scale-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header content
  </span>
  A title
</scale-modal>
`;
